<resources>
    <string name="app_name">Pic_Pho</string>
    <string name="splash_page">splash_page</string>
    <string name="example_avatar">example_avatar</string>
    <string name="select_photo">사진 선택</string>
    <string name="connect">연결하기</string>
    <string name="exmaple_username">조정훈</string>
    <string name="finish_button">끝내기!!</string>
    <string name="like_button">좋아요!!</string>
    <string name="discard_button">사진가져오기</string>
    <string name="save_button">저장해요!!</string>
    <string name="yukika">유키카</string>
    <string name="appId">fe75588b152548c4ae51ea58f7fb0f46</string>
    <string name="firebase_notification_channel_id">roomNum</string>
    <string name="choose_which_connection">연결방식을 선택해주세요.</string>
    <string name="nearby_friends">친구들이 \n가까이에 있어요!</string>
    <string name="far_friends">친구들이 \n멀리 있어요!</string>
    <string name="nearby_help">와이파이 다이렉트 기술로 \n주변의 기기와 사진을\n주고 받아요!\n모바일데이터없이 빠른\n속도 사진 원본 전송이\n가능합니다.</string>
    <string name="far_help">음성대화를 나누며 재미있게\n사진을 공유해보세요!\n와이파이 환경이 아닐 경우\n데이터 비용이 청구될 수\n있습니다.</string>
    <string name="make_group">방만들기</string>
    <string name="research">다시 검색하기</string>
    <string name="search_around_wifi">주변기기를 검색하세요!</string>
    <string name="waiting_for_owner">친구들이 사진을 선택하기를 기다리고 있습니다!</string>
    <string name="waiting_room_default_name">친구를 기다리고 있어요.</string>
    <!--    <string name="KAKAO_APP_KEY">W2v8GqVXhdzGlgig0Sxr1gwrnEE</string>-->
</resources>